[package]
name = "cargo-run-selectable"
license = "MIT"
authors = ["Maciej Lewandowski <maciej4612@gmail.com>"]
categories = ["development-tools"]
description = "A simple Rust utility that helps developers run `cargo run` in workspaces with multiple binary targets without needing to specify one beforehand. When you run the program, it will prompt you to select a target from the list of available binary targets in the workspace."
repository = "https://github.com/maciejlewandowskii/cargo-run-selectable"
version = "0.1.1"
edition = "2021"

[dependencies]
dialoguer = "0.11"
cargo_metadata = "0.18"
